Adding changes to repo

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ terraform.tfstate.backup
 .terraform.tfstate.lock.info
 infra/tfplan
 microservices-demo
+.terraform.lock.hcl
 # Created by https://www.toptal.com/developers/gitignore/api/terraform
 # Edit at https://www.toptal.com/developers/gitignore?templates=terraform
 
